--- a/iText/Makefile
+++ b/iText/Makefile
@@ -1,25 +1,29 @@
 # $NetBSD$
 #
 
-DISTNAME=		itext-1.3
-PKGNAME=		java-itext-1.3
-CATEGORIES=		textproc
-MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=itext/
-EXTRACT_SUFX=		.jar
+DISTNAME=	itext-5.3.4
+PKGNAME=	java-${DISTNAME}
+CATEGORIES=	textproc
+MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=itext/}
+EXTRACT_SUFX=	.zip
 
-MAINTAINER=		pkgsrc-users@NetBSD.org
-HOMEPAGE=		http://www.lowagie.com/iText/
-COMMENT=		Java classes to generate PDF files on the fly
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	http://www.lowagie.com/iText/
+COMMENT=	Java classes to generate PDF files on the fly
+LICENSE=	gnu-agpl-v3
 
-WRKSRC=			${WRKDIR}
+WRKSRC=		${WRKDIR}
+NO_CONFIGURE=	yes
+NO_BUILD=	yes
 
-do-extract:
+MESSAGE_SUBST=	PKGV_NR=${PKGVERSION_NOREV}
 
-do-build:
+INSTALLATION_DIRS+=	lib/java share/doc/${PKGBASE}
 
 do-install:
-	${INSTALL_DATA_DIR} ${DESTDIR}${PREFIX}/lib/java
-	${INSTALL_DATA} ${DISTDIR}/${DISTNAME}.jar ${DESTDIR}${PREFIX}/lib/java/itext.jar
+		cd ${WRKSRC} && \
+			${INSTALL_DATA} *${PKGVERSION_NOREV}.jar ${DESTDIR}${PREFIX}/lib/java && \
+			${INSTALL_DATA} notice.txt ${DESTDIR}${PREFIX}/share/doc/${PKGBASE}/README
 
 .include "../../mk/java-vm.mk"
 .include "../../mk/bsd.pkg.mk"
