Fixed typo in variable assignment of MESSAGE_SUBST.

--- a/iText/Makefile
+++ b/iText/Makefile
@@ -16,7 +16,7 @@ WRKSRC=		${WRKDIR}
 NO_CONFIGURE=	yes
 NO_BUILD=	yes
 
-MESSAGE_SUBST=	PKGV_NR=${PKGVERSION_NOREV}
+MESSAGE_SUBST+=	PKGV_NR=${PKGVERSION_NOREV}
 
 INSTALLATION_DIRS+=	lib/java share/doc/${PKGBASE}
 
