--- a/icmpchat/Makefile
+++ b/icmpchat/Makefile
@@ -7,6 +7,7 @@ MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=icmpchat/}
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://icmpchat.sourceforge.net/
 COMMENT=	Simple chat using ICMP and Rijndael-256 encryptation
+LICENSE=	modified-bsd
 
 PKG_DESTDIR_SUPPORT=	none
 
