INSTALLATION_DIRS+=${PKG_SYSCONFDIR} - might fix install failure in recent bulk build.

--- a/libjdksmidi/Makefile
+++ b/libjdksmidi/Makefile
@@ -31,6 +31,7 @@ SUBST_SED.bash=		-e "s|/bin/bash|${BASH}|1"
 
 INSTALL_ENV+=		TAR=${GTAR} TARGET_MAN_DIR=${PKGMANDIR}
 INSTALL_ENV+=		TARGET_INSTALL_DEV_DIR=${DESTDIR}${PREFIX}
+INSTALLATION_DIRS+=	${PKG_SYSCONFDIR}
 
 
 .include "../../mk/bsd.pkg.mk"
