--- a/sdd/Makefile
+++ b/sdd/Makefile
@@ -1,13 +1,14 @@
 # $NetBSD$
 #
 
-DISTNAME=		sdd-1.52
-CATEGORIES=		sysutils
-MASTER_SITES=		ftp://ftp.berlios.de/pub/sdd/
+DISTNAME=	sdd-1.52
+CATEGORIES=	sysutils
+MASTER_SITES=	ftp://ftp.berlios.de/pub/sdd/
 
-MAINTAINER=		pkgsrc-users@NetBSD.org
-HOMEPAGE=		http://directory.fsf.org/project/sdd/
-COMMENT=		Replacement for 'dd'
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	http://directory.fsf.org/project/sdd/
+COMMENT=	Replacement for 'dd'
+LICENSE=	gnu-gpl-v2
 
 USE_PKGLOCALEDIR=	yes
 USE_TOOLS+=		gmake
