BUILD_DEFS+= PKG_SYSCONFBASE

--- a/mopher/Makefile
+++ b/mopher/Makefile
@@ -29,7 +29,7 @@ CONFIGURE_ARGS+=	--localstatedir=${MOPHER_HOME}
 
 .include "options.mk"
 
-BUILD_DEFS+=		VARBASE
+BUILD_DEFS+=		PKG_SYSCONFBASE VARBASE
 
 PKG_SYSCONFSUBDIR=	mopher
 INSTALLATION_DIRS+=	sbin ${EGDIR}
