Keep all distfiles in dedicated subdirectory.
It allows to handle distfiles in-place substitutions on vendor side
more smoothly, as well as having different pkgsrc branches configured
to the same distdir.

Per conversation with <wiz> on pkgsrc-wip-discuss@. Thanks, Thomas!

--- a/pt-ttf/Makefile
+++ b/pt-ttf/Makefile
@@ -1,7 +1,9 @@
 # $NetBSD$
 #
 
-DISTNAME=	pt-ttf-2.004.20120328
+PT_TTF_REV=	20121212
+DISTNAME=	pt-ttf-2.004.${PT_TTF_REV}	# as derived from TTF files
+DIST_SUBDIR=	pt-ttf-${PT_TTF_REV}
 CATEGORIES=	fonts
 MASTER_SITES=	http://www.fontstock.com/public/
 DISTFILES=	PTSansOFL.zip PTSerifOFL.zip PTMonoOFL.zip
