--- a/nss-pam-ldapd/Makefile
+++ b/nss-pam-ldapd/Makefile
@@ -12,7 +12,7 @@ LICENSE=	gnu-lgpl-v2
 PKG_USERS=		nslcd:nslcd
 PKG_GROUPS=		nslcd
 
-USE_TOOLS+=		gmake
+USE_TOOLS+=		autoconf 
 GNU_CONFIGURE=		yes
 CONFIGURE_ARGS+=	--sysconfdir=${PKG_SYSCONFDIR}
 CONFIGURE_ARGS+=	--with-ldap-conf-file=${EGDIR}/nslcd.conf
@@ -20,6 +20,9 @@ CONFIGURE_ARGS+=	--with-ldap-conf-file=${EGDIR}/nslcd.conf
 EGDIR=			${PREFIX}/share/examples/${PKGBASE}
 CONF_FILES=		${EGDIR}/nslcd.conf
 CONF_FILES+=		${PKG_SYSCONFDIR}/nslcd.conf
+
+pre-configure:
+		cd ${WRKSRC} && autoconf
 
 .include "../../databases/openldap-client/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
