--- a/pike-core/Makefile
+++ b/pike-core/Makefile
@@ -5,12 +5,19 @@ PKGNAME=	pike-core-${PIKE_VERSION}
 CATEGORIES=	lang
 COMMENT=	Dynamic programming language with a syntax similar to C++
 
-MODULE_NAMES=	_ADT _Charset _math Parser spider sprintf \
-		files system Gmp Nettle Regexp
+MODULE_NAMES=	_ADT _math _Charset files system Nettle Gmp Math Parser \
+		Regexp sprintf Unicode Locale
 
 .for m in ${MODULE_NAMES}
 MODULE_DIRS+=		modules/${m:Q}
 .endfor
+
+REPLACE_INTERPRETER+=	pike
+REPLACE.pike.old=	/usr/bin/env pike
+REPLACE.pike.new=	${PREFIX}/bin/pike
+REPLACE_FILES.pike=	lib/modules/Tools.pmod/Standalone.pmod/rsqld.pike \
+			lib/modules/Tools.pmod/Standalone.pmod/dump.pike \
+			bin/precompile.pike
 
 .include "../../wip/pike-core/Makefile.common"
 
