--- a/pike-core/Makefile.common
+++ b/pike-core/Makefile.common
@@ -17,10 +17,9 @@ HOMEPAGE=	http://pike.lysator.liu.se/
 
 PATCHDIR=	${PKGDIR}/../../wip/pike-core/patches
 DISTINFO_FILE=	${PKGDIR}/../../wip/pike-core/distinfo
-PIKEDIR=	${WRKDIR}/${DISTNAME}
-WRKSRC=		${PIKEDIR}/src
 
-PKG_DESTDIR_SUPPORT=	none
+CONFIGURE_DIRS=		src
+BUILD_DIRS=		src
 
 USE_TOOLS+=		bison autoconf
 GNU_CONFIGURE=		yes
@@ -126,7 +125,7 @@ CONFIGURE_ARGS+=	--with-${m:Q}
 
 pre-configure:
 	${MKDIR} -p ${WRKSRC} &&           \
-	cd ${PIKEDIR}/src &&               \
+	cd ${WRKSRC}/src &&               \
 	if ! test -f autoconfig.done; then \
 		./run_autoconfig . ./src ${MODULE_DIRS} && \
 		${TOUCH} autoconfig.done;  \
