*** empty log message ***

--- a/libjdksmidi/Makefile
+++ b/libjdksmidi/Makefile
@@ -4,8 +4,7 @@
 DISTNAME=	jdksmidi-20121031-1
 PKGNAME=	lib${DISTNAME:S/-1/r1/}
 CATEGORIES=	audio
-MASTER_SITES=	https://github.com/downloads/jdkoftinoff/jdksmidi/
-FETCH_USING=	curl
+MASTER_SITES=	http://dist.jdkoftinoff.com/jdksmidi/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.jdkoftinoff.com/main/Free_Projects/C++_MIDI_Library/
