--- a/wmc2d/Makefile
+++ b/wmc2d/Makefile
@@ -3,6 +3,7 @@
 
 DISTNAME=	wmc2d-2011-04-29-17
 PKGNAME=	wmc2d-2.05
+PKGREVISION=	1
 CATEGORIES=	wm
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=wmc2d/}
 EXTRACT_SUFX=	.tar.bz2
@@ -27,5 +28,5 @@ SUBST_SED.paths+=	-e "s|share/man|${PKGMANDIR}|1"
 .include "../../x11/xcb-util-wm/buildlink3.mk"
 .include "../../x11/xcb-util036/buildlink3.mk"
 .include "../../x11/xcb-util/buildlink3.mk"
-.include "../../x11/libxcb/buildlink3.mk"
+BUILD_DEPENDS+=		libxcb-[0-9]*:../../x11/libxcb
 .include "../../mk/bsd.pkg.mk"
