BUILD_DEPENDS+=glib2; USE_TOOLS+=pkg-config; Bump PKGREVISION.

--- a/mtpaint/Makefile
+++ b/mtpaint/Makefile
@@ -2,7 +2,7 @@
 #
 
 DISTNAME=	mtpaint-3.40
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	graphics
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=mtpaint/mtpaint/3.40/}
 EXTRACT_SUFX=	.tar.bz2
@@ -12,13 +12,13 @@ HOMEPAGE=	http://mtpaint.sourceforge.net/
 COMMENT=	Painting program and photo editor
 LICENSE=	gnu-gpl-v2
 
-HAS_CONFIGURE=	yes
-CONFIGURE_ARGS=		--prefix=${PREFIX} --bindir=${PREFIX}/bin
+HAS_CONFIGURE=		yes
+CONFIGURE_ARGS+=	--prefix=${PREFIX} --bindir=${PREFIX}/bin
 CONFIGURE_ARGS+=	--mandir=${PREFIX}/${PKGMANDIR}
 CONFIGURE_ARGS+=	cflags GIF gtk2 ft jpeg intl tiff man
-USE_TOOLS=	gmake
+USE_TOOLS+=		gmake pkg-config
 
-
+BUILD_DEPENDS+=	glib2-[0-9]*:../../devel/glib2
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
 .include "../../graphics/freetype2/buildlink3.mk"
 .include "../../graphics/lcms2/buildlink3.mk"
