Set LICENSE to 2-clause-bsd.
# BOF

SPECIAL NOTES:

This software is also falls under the bourbon_ware clause v2:

 This software is free, but should you find this software useful in your
 daily work and would like to compensate the author, donations in the form
 of aged bourbon and scotch are welcome by the author.  The user may feel
 exempt from this clause if they are below drinking age or think the author
 has already partaken of too many drinks.

# EOF

Unable to find the full source of the bourbon_ware license to suggest its
addition to licenses/. For the simplification of our package system, to not
delay the import of this package, and while not being overly judgemental,
let's assume the author has already partaken of too many drinks. May a big
bottle of Maker's Mark find its way into your hands soon, author.

--- a/tktable/Makefile
+++ b/tktable/Makefile
@@ -10,7 +10,7 @@ MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=tktable/}
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://tktable.sourceforge.net/
 COMMENT=	Full-featured 2D table widget for Tk
-#LICENSE=	# TODO: (see ${WRKSRC}/license.txt) 2-clause-bsd + bourbon_ware
+LICENSE=	2-clause-bsd
 
 GNU_CONFIGURE=	yes
 
