Introduce GO_PLATFORM as a subst variable, limit to i386 and x86_64. Also fix some wrong substitutions in the PLIST manually.

--- a/go/Makefile
+++ b/go/Makefile
@@ -15,6 +15,15 @@ WRKSRC=		${WRKDIR}/go
 USE_TOOLS+=	bash:run perl:run pax
 UNLIMIT_RESOURCES= datasize stacksize memorysize
 
+# TODO: linux/arm
+ONLY_FOR_PLATFORM= *-*-i386 *-*-x86_64
+.if ${MACHINE_ARCH} == "i386"
+GOARCH=		386
+.elif ${MACHINE_ARCH} == "x86_64"
+GOARCH=		amd64
+.endif
+PLIST_SUBST+=	GO_PLATFORM=${LOWER_OPSYS:Q}_${GOARCH:Q}
+
 # cgo compiles under TMPDIR
 TMPDIR?=	/tmp
 BUILDLINK_PASSTHRU_DIRS+= ${TMPDIR}
