--- a/drow/patches/patch-Makefile.in
+++ b/drow/patches/patch-Makefile.in
@@ -22,7 +22,7 @@ Make package use DESTDIR.
 -	chgrp $(GROUP) ${PREFIX}${BINDIR}/${PROGNAME}
 -	chown $(OWNER) ${PREFIX}${BINDIR}/${PROGNAME}
 +	cp ${PROGNAME} $(DESTDIR)${PREFIX}${BINDIR}
-+	chown 755 $(DESTDIR)${PREFIX}${BINDIR}/${PROGNAME}
++	chmod 755 $(DESTDIR)${PREFIX}${BINDIR}/${PROGNAME}
 +	chgrp $(GROUP) $(DESTDIR)${PREFIX}${BINDIR}/${PROGNAME}
 +	chown $(OWNER) $(DESTDIR)${PREFIX}${BINDIR}/${PROGNAME}
  
