--- a/glade2-nognome/Makefile
+++ b/glade2-nognome/Makefile
@@ -2,24 +2,24 @@
 # $Id$
 #
 
-DISTNAME=		glade-2.0.1
-PKGNAME=		${DISTNAME:S/-/2-nognome-/}
-PKGREVISION=		2
-CATEGORIES=		devel
-MASTER_SITES=		${MASTER_SITE_GNOME:=sources/glade/2.0/}
-EXTRACT_SUFX=		.tar.bz2
+DISTNAME=	glade-2.0.1
+PKGNAME=	${DISTNAME:S/-/2-nognome-/}
+PKGREVISION=	3
+CATEGORIES=	devel
+MASTER_SITES=	${MASTER_SITE_GNOME:=sources/glade/2.0/}
+EXTRACT_SUFX=	.tar.bz2
 
-MAINTAINER=		pkgsrc-users@NetBSD.org
-HOMEPAGE=		http://glade.gnome.org/
-COMMENT=		User interface builder for the GTK2+ toolkit and GNOME2
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	http://glade.gnome.org/
+COMMENT=	User interface builder for the GTK2+ toolkit and GNOME2
 
-CONFLICTS+=		glade-*
+CONFLICTS+=	glade-*
 
 PKG_DESTDIR_SUPPORT=	none
 
 GNU_CONFIGURE=		YES
 USE_PKGLOCALEDIR=	YES
-USE_TOOLS+=		gmake msgfmt pkg-config
+USE_TOOLS+=		gmake msgfmt perl pkg-config
 USE_LIBTOOL=		YES
 
 
