Updated to latest version. Still doesn't build with pkgsrc libcerror (bundled is fine). Left commented in Makefile and buildlink3.mk;

--- a/libuna/Makefile
+++ b/libuna/Makefile
@@ -1,7 +1,7 @@
 # $NetBSD$
 #
 
-DISTNAME=	libuna-alpha-20120630
+DISTNAME=	libuna-alpha-20130103
 PKGNAME=	${DISTNAME:S/alpha-//1}
 CATEGORIES=	converters
 MASTER_SITES=	http://libuna.googlecode.com/files/
@@ -11,7 +11,7 @@ HOMEPAGE=	http://code.google.com/p/libuna/
 COMMENT=	Library to support Unicode and ASCII (byte string) conversions
 LICENSE=	gnu-lgpl-v3
 
-WRKSRC=		${WRKDIR}/libuna-20120630
+WRKSRC=		${WRKDIR}/libuna-20130103
 GNU_CONFIGURE=	yes
 USE_LIBTOOL=	yes
 USE_TOOLS+=	msgfmt msgmerge pkg-config xgettext
@@ -20,4 +20,5 @@ PKGCONFIG_OVERRIDE+=	libuna.pc.in
 
 .include "options.mk"
 
+#.include "../../wip/libcerror/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
