--- a/wl-current/Makefile
+++ b/wl-current/Makefile
@@ -47,8 +47,12 @@ _GIT_FLAGS?=            --depth 1
 
 post-install:
 	set -e; \
-	for f in BUGS NEWS README; do \
+	for f in BUGS NEWS ; do \
 		${INSTALL_DATA} ${WRKSRC:Q}/"$$f" ${DESTDIR:Q}${DOCDIR:Q}/en; \
+		${INSTALL_DATA} ${WRKSRC:Q}/"$$f".ja ${DESTDIR:Q}${DOCDIR:Q}/ja; \
+	done
+	for f in README ; do \
+		${INSTALL_DATA} ${WRKSRC:Q}/"$$f".md ${DESTDIR:Q}${DOCDIR:Q}/en; \
 		${INSTALL_DATA} ${WRKSRC:Q}/"$$f".ja ${DESTDIR:Q}${DOCDIR:Q}/ja; \
 	done
 	${INSTALL_DATA} ${WRKSRC:Q}/samples/en/dot.* ${DESTDIR:Q}${EXAMPLESDIR:Q}/en
