Let NetBSD/clang package. Final ling gets 'unresolved reference', also found on FreeBSD/ports.   http://lists.freebsd.org/pipermail/freebsd-ports-bugs/2012-December/245884.html Checked on   NetBSD/amd64 6.99.16   clang version 3.2 (trunk 168187)   Target: x86_64--netbsd And also   NetBSD/amd64 6.0.1   gcc (NetBSD nb2 20110806) 4.5.3 Thanks wiz for the information.

--- a/audacity-devel/Makefile
+++ b/audacity-devel/Makefile
@@ -34,6 +34,11 @@ CONFIG_GUESS_OVERRIDE=		\
 CONFIG_SUB_OVERRIDE=		\
 	config.sub */config.sub */*/config.sub */*/*/config.sub
 
+SUBST_CLASSES+=		clang
+SUBST_STAGE.clang=	post-patch
+SUBST_MESSAGE.clang=	Fix linking problem for clang
+SUBST_FILES.clang=	lib-src/libnyquist/nyquist/ffts/src/fftlib.c
+SUBST_SED.clang=	-e 's|inline void|static inline void|'
 
 PTHREAD_AUTO_VARS=	yes
 
