--- a/ibus-mozc/Makefile.common
+++ b/ibus-mozc/Makefile.common
@@ -47,11 +47,13 @@ SUBST_VARS.gyp+=	PREFIX QTDIR
 do-configure:
 	cd ${WRKSRC} && env ${MAKE_ENV} \
 		GYP_DEFINES="use_libprotobuf=1" \
-		${PYTHONBIN} build_mozc.py gyp && \
+		${PYTHONBIN} build_mozc.py gyp --os=netbsd && \
 		${PYTHONBIN} build_mozc.py build_tools -c Release -j ${MAKE_JOBS}
 
 .include "../../devel/glib2/buildlink3.mk"
 .include "../../devel/protobuf/buildlink3.mk"
+# gmock is not used yet...
+.include "../../devel/gmock/buildlink3.mk"
 .include "../../inputmethod/ibus/buildlink3.mk"
 .include "../../inputmethod/zinnia/buildlink3.mk"
 .include "../../x11/gtk2/buildlink3.mk"
