Verified on DragonFly 3.2.2/gcc-4.7 with and without options.

--- a/fvwm265/Makefile
+++ b/fvwm265/Makefile
@@ -66,6 +66,10 @@ post-install:
 BUILDLINK_DEPMETHOD.libXt?=	build
 
 .include "../../devel/readline/buildlink3.mk"
+# DragonFly does not have built-in gettext
+.if ${OPSYS} == "DragonFly"
+.include "../../devel/gettext-lib/buildlink3.mk"
+.endif
 .include "../../x11/libSM/buildlink3.mk"
 .include "../../x11/libXext/buildlink3.mk"
 .include "../../x11/libXinerama/buildlink3.mk"
