(1) Add LICENSE= (2) Add comment on patches (as Fix build for sunos). (3) Add TODO, (actually done)

--- a/audacity-devel/Makefile
+++ b/audacity-devel/Makefile
@@ -5,6 +5,7 @@ PKGNAME=		${DISTNAME:S/-minsrc-/-/}
 CATEGORIES=		audio
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=audacity/}
 EXTRACT_SUFX=		.tar.bz2
+LICENSE=		gnu-gpl-v2
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
 HOMEPAGE=		http://audacity.sourceforge.net/
