--- a/hs-QuickCheck/Makefile
+++ b/hs-QuickCheck/Makefile
@@ -1,7 +1,7 @@
 # $NetBSD$
 #
 
-DISTNAME=	QuickCheck-2.4.2
+DISTNAME=	QuickCheck-2.5.1.1
 CATEGORIES=	devel
 
 MAINTAINER=	pho@cielonegro.org
@@ -9,4 +9,5 @@ COMMENT=	Automatic testing of Haskell programs
 LICENSE=	modified-bsd
 
 .include "../../wip/mk/haskell.mk"
+.include "../../wip/hs-random/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
