--- a/cabal-install/Makefile
+++ b/cabal-install/Makefile
@@ -1,15 +1,18 @@
 # $NetBSD$
 
-DISTNAME=		cabal-install-0.10.2
-PKGNAME=		${DISTNAME}
-CATEGORIES=		devel
+DISTNAME=	cabal-install-1.16.0.2
+PKGNAME=	${DISTNAME}
+CATEGORIES=	devel
 
-MAINTAINER=		pho@cielonegro.org
-COMMENT=		Command-line interface for Cabal and Hackage
-LICENSE=		modified-bsd
+MAINTAINER=	pho@cielonegro.org
+COMMENT=	Command-line interface for Cabal and Hackage
+LICENSE=	modified-bsd
 
 .include "../../wip/mk/haskell.mk"
+.include "../../wip/hs-Cabal/buildlink3.mk"
 .include "../../wip/hs-HTTP/buildlink3.mk"
+.include "../../wip/hs-mtl/buildlink3.mk"
 .include "../../wip/hs-network/buildlink3.mk"
+.include "../../wip/hs-random/buildlink3.mk"
 .include "../../wip/hs-zlib/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
