* Convert to build with Debug. * Fix installation and search path.

--- a/ibus-mozc/Makefile.common
+++ b/ibus-mozc/Makefile.common
@@ -41,6 +41,8 @@ SUBST_FILES.gyp+=	gui/qt_rcc.gypi
 SUBST_FILES.gyp+=	gui/qt_moc.gypi
 SUBST_FILES.gyp+=	gui/qt_uic.gypi
 SUBST_FILES.gyp+=	gui/qt_libraries.gypi
+SUBST_FILES.gyp+=	base/const.h
+SUBST_FILES.gyp+=	build_mozc.py
 SUBST_VARS.gyp+=	OPENSSL_CFLAGS OPENSSL_INC OPENSSL_LDFLAGS OPENSSL_LIBS
 SUBST_VARS.gyp+=	PREFIX QTDIR
 
