Explicitly point to the pkgsrc graphviz. N.B.: Requires math/R/makefile.extension v. 1.18 or newer.

--- a/R-Rgraphviz/Makefile
+++ b/R-Rgraphviz/Makefile
@@ -14,6 +14,8 @@ LICENSE=	artistic-2.0
 
 USE_LANGUAGES=	c
 
+CONFIGURE_ARGS+=		--with-graphviz=${PREFIX}
+
 BUILDLINK_API_DEPENDS.R+=	R>=2.6.0
 
 .include "../../math/R/Makefile.extension"
