--- a/electrum/Makefile
+++ b/electrum/Makefile
@@ -16,6 +16,15 @@ PYDISTUTILSPKG= yes
 DEPENDS+=	${PYPKGPREFIX}-slowaes:../../wip/py-slowaes
 DEPENDS+=	${PYPKGPREFIX}-ecdsa:../../wip/py-ecdsa
 
+FIX_PYTHON_PATHS+=	lib/*.py
+
+# This one is for /usr/bin/env python (or even /usr/bin/env Python or /usr/bin/python2)
+SUBST_CLASSES+=		path
+SUBST_SED.path=		-e "s,\#! */usr/bin/env *[Pp]ython[0-9.]*,\#!${PYTHONBIN},"
+SUBST_MESSAGE.path=	Fixing path to python.
+SUBST_STAGE.path=	post-patch
+SUBST_FILES.path=	${FIX_PYTHON_PATHS}
+
 .include "../../lang/python/application.mk"
 .include "../../lang/python/extension.mk"
 .include "../../x11/py-qt4/buildlink3.mk"
