Thanks adding options.mk. Correction to PKGREVISION. (But I don't think to bump it at wip).

--- a/fvwm265/Makefile
+++ b/fvwm265/Makefile
@@ -12,10 +12,11 @@ COMMENT=	Newer version of X11 Virtual window manager
 LICENSE=	gnu-gpl-v2
 
 #DEPENDS+=	xpmroot-2.*:../../x11/xpmroot
+PKGREVISION=	1
 
 CONFLICTS=	fvwm1-[0-9]* fvwm2-[0-9]* metisse-[0-9]* xpmroot[0-9]*
 EXTRACT_ONLY=	${DISTNAME}.tar.gz
-FVWM_VER=	2.6.5nb1
+FVWM_VER=	2.6.5
 
 USE_X11BASE=		YES
 GNU_CONFIGURE=		YES
