--- a/ibus-mozc/Makefile
+++ b/ibus-mozc/Makefile
@@ -10,13 +10,13 @@ DEPENDS+=	xdg-utils-[0-9]*:../../misc/xdg-utils
 
 do-build:
 	cd ${WRKSRC} && env ${MAKE_ENV} \
-		${PYTHONBIN} build_mozc.py build -j ${MAKE_JOBS} \
+		${PYTHONBIN} build_mozc.py build -c Release -j ${MAKE_JOBS} \
 			unix/ibus/ibus.gyp:ibus_mozc
 
 do-install:
-	${INSTALL_PROGRAM} ${WRKSRC}/out_bsd/Debug/ibus_mozc \
+	${INSTALL_PROGRAM} ${WRKSRC}/out_${OSDEST}/Release/ibus_mozc \
 		${DESTDIR}${PREFIX}/libexec/ibus-engine-mozc
-	${INSTALL_DATA} ${WRKSRC}/out_bsd/Debug/obj/gen/unix/ibus/mozc.xml \
+	${INSTALL_DATA} ${WRKSRC}/out_${OSDEST}/Release/obj/gen/unix/ibus/mozc.xml \
 		${DESTDIR}${PREFIX}/share/ibus/component
 .for f in ui-alpha_full ui-alpha_half ui-dictionary ui-direct \
 	ui-hiragana ui-katakana_full ui-katakana_half ui-properties ui-tool
