* Fix installation path and name. * Support NetBSD and Linux in path.

--- a/mozc-server/Makefile
+++ b/mozc-server/Makefile
@@ -4,7 +4,7 @@
 DISTNAME=	mozc-1.6.1187.102
 PKGNAME=	${DISTNAME:S/mozc-/mozc-server-/}
 
-INSTALLATION_DIRS+=	bin
+INSTALLATION_DIRS+=	libexec
 
 do-build:
 	cd ${WRKSRC} && env ${MAKE_ENV} \
@@ -12,7 +12,7 @@ do-build:
 			server/server.gyp:mozc_server
 
 do-install:
-	${INSTALL_PROGRAM} ${WRKSRC}/out_linux/Release/mozc_server \
-		${DESTDIR}${PREFIX}/bin
+	${INSTALL_PROGRAM} ${WRKSRC}/out_${OSDEST}/Release/mozc_server \
+		${DESTDIR}${PREFIX}/libexec/mozc_server_japanese
 
 .include "../../wip/ibus-mozc/Makefile.common"
