--- a/compiz-boxmenu/Makefile
+++ b/compiz-boxmenu/Makefile
@@ -3,6 +3,7 @@
 
 DISTNAME=	compiz-boxmenu_-_1.1.9
 PKGNAME=	${DISTNAME:S/_-_/-/1}
+PKGREVISION=	1
 CATEGORIES=	x11
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=compizboxmenu/}
 
@@ -13,12 +14,9 @@ LICENSE=	gnu-gpl-v2
 
 WRKSRC=		${WRKDIR}/${PKGBASE}
 USE_LANGUAGES+=	c
-USE_TOOLS+=	gmake m4
+USE_TOOLS+=	gmake m4 pkg-config
 
 PYTHON_VERSIONS_ACCEPTED= 27 26
-
-#REPLACE_PYTHON+=	new-editor/cb-editor new-editor/cbutil.py
-#REPLACE_PYTHON+=	new-editor/pyicon_browser.py
 
 EGDIR=			share/examples/xdg/compiz/boxmenu
 INSTALLATION_DIRS+=	${EGDIR}
