--- a/unagi/Makefile
+++ b/unagi/Makefile
@@ -2,7 +2,7 @@
 #
 
 DISTNAME=	unagi-0.3.3
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	wm
 MASTER_SITES=	https://projects.mini-dweeb.org/attachments/download/111/
 FETCH_USING=	curl
@@ -42,7 +42,8 @@ post-install:
 .include "../../x11/xcb-util/buildlink3.mk"
 BUILDLINK_API_DEPENDS.libxcb+=	libxcb>=1.8
 .include "../../x11/libxcb/buildlink3.mk"
-BUILD_DEPENDS+=	xcb-proto>=1.6:../../x11/xcb-proto
+BUILDLINK_DEPMETHOD.xcb-proto=	build
+.include "../../x11/xcb-proto/buildlink3.mk"
 .include "../../devel/confuse/buildlink3.mk"
 .include "../../x11/libxdg-basedir/buildlink3.mk"
 .include "../../mk/dlopen.buildlink3.mk"
