--- a/wmswallow/Makefile
+++ b/wmswallow/Makefile
@@ -3,9 +3,11 @@
 
 DISTNAME=	wmswallow
 PKGNAME=	${DISTNAME}-0.6.1
+PKGREVISION=	1
 CATEGORIES=	wm
-MASTER_SITES=	http://dockapps.windowmaker.org/files/102/141/
+MASTER_SITES=	http://dockapps.windowmaker.org/download.php/id/141/
 EXTRACT_SUFX=	.tar.Z
+FETCH_USING=	wget
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://dockapps.windowmaker.org/file.php/id/102
