--- a/dbus-explorer/Makefile
+++ b/dbus-explorer/Makefile
@@ -7,7 +7,7 @@ CATEGORIES=	sysutils
 MASTER_SITES=	http://www.ndesk.org/archive/dbus-explorer/
 
 MAINTAINER=	kamel.derouiche@gmail.com
-HOMEPAGE=	http://neteril.org/projects/dbus-explorer/
+HOMEPAGE=	http://www.ndesk.org/DBusExplorer
 COMMENT=	GTK+ interface for viewing D-Bus service APIs written by C\#
 #LICENSE=	# TODO
 
