--- a/firefox/Makefile
+++ b/firefox/Makefile
@@ -4,7 +4,7 @@
 PKGNAME=	firefox-${FIREFOX_VER}
 CATEGORIES=	www
 
-MAINTAINER=	tnn@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.mozilla.com/en-US/firefox/
 COMMENT=	Web browser with support for extensions
 LICENSE=	mpl-1.1
