--- a/virtualbox/Makefile
+++ b/virtualbox/Makefile
@@ -8,7 +8,7 @@ CATEGORIES=	emulators
 MASTER_SITES=	http://download.virtualbox.org/virtualbox/${VBOX_VER}/
 EXTRACT_SUFX=	.tar.bz2
 
-MAINTAINER=	tnn@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.virtualbox.org/
 COMMENT=	General-purpose full virtualizer for x86 hardware
 LICENSE=	gnu-gpl-v2
