--- a/mp3chop/Makefile
+++ b/mp3chop/Makefile
@@ -8,6 +8,7 @@ MASTER_SITES=		http://www.fysh.org/~mac/mp3chop/
 MAINTAINER=		shattered@users.sourceforge.net
 HOMEPAGE=		http://www.fysh.org/~mac/mp3chop/
 COMMENT=		Program for chopping up mp3 files
+LICENSE=		gnu-gpl-v2
 
 PKG_DESTDIR_SUPPORT=	none
 
