--- a/pypod/Makefile
+++ b/pypod/Makefile
@@ -11,6 +11,7 @@ DEPENDS+=		${PYPKGPREFIX}-mad>=0.5.0:../../audio/py-mad
 MAINTAINER=		shattered@users.sourceforge.net
 HOMEPAGE=		http://superduper.net/index.py?page=pypod
 COMMENT=		Python tools for manipluating iPod data
+LICENSE=		gnu-gpl-v2
 
 PYDISTUTILSPKG=		yes
 PYTHON_PATCH_SCRIPTS=	*.py */*.py
