A temp. fix to get node compiling on OS X under pkgsrc-wic.
Gyp does not know about the differences in libtool, so use the one it
expects (/usr/bin/libtool) if OS is Darwin.

OpenSSL is included in node as a static library.

If using node-modules that require OpenSSL (node-guardtime), then
node must be compiled with a shared openssl.  If the option 'openssl'
is specified, we will build node against a shared openssl and depending on
PREFER_PKGSRC, this will either be security/openssl or system openssl.

--- a/node/Makefile
+++ b/node/Makefile
@@ -17,6 +17,11 @@ HAS_CONFIGURE=	yes
 USE_TOOLS+=	pkg-config
 USE_TOOLS+=	gmake
 USE_LANGUAGES=	c c++
+USE_LIBTOOL=    yes
+
+.if ${OPSYS} == "Darwin"
+PKG_LIBTOOL=    /usr/bin/libtool
+.endif
 
 .include "../../mk/bsd.prefs.mk"
 .include "options.mk"
