--- a/flare-engine/Makefile
+++ b/flare-engine/Makefile
@@ -10,7 +10,7 @@ FETCH_USING=	curl
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://flarerpg.org/
 COMMENT=	Free Libre Action Roleplaying Engine (engine only)
-LICENSE=	gnu-gpl-v3
+LICENSE=	gnu-gpl-v3 AND cc-by-sa-v3.0 AND open-font-license
 
 WRKSRC=		${WRKDIR}/${PKGNAME_NOREV}
 USE_LANGUAGES=	c c++
