Stop pulling Python 2.6 in.

--- a/v8/Makefile
+++ b/v8/Makefile
@@ -24,6 +24,6 @@ do-build:
 do-install:
 	cd ${WRKSRC}
 
-.include "../../lang/python26/buildlink3.mk"
+.include "../../lang/python/pyversion.mk"
 .include "../../wip/mk/svn-package.mk"
 .include "../../mk/bsd.pkg.mk"
