--- a/glib2/Makefile.common
+++ b/glib2/Makefile.common
@@ -26,8 +26,8 @@ USE_LANGUAGES=		c c++ c99
 USE_LIBTOOL=		yes
 TEST_TARGET=		check
 
-DISTINFO_FILE=		${.CURDIR}/../../jb-wip/glib2/distinfo
-PATCHDIR=		${.CURDIR}/../../jb-wip/glib2/patches
+DISTINFO_FILE=		${.CURDIR}/../../wip/glib2/distinfo
+PATCHDIR=		${.CURDIR}/../../wip/glib2/patches
 
 GNU_CONFIGURE=		yes
 CONFIGURE_ENV+=		PKGLOCALEDIR=${PKGLOCALEDIR}
