Note that this is now part of core trac, and scheduled for removal.

--- a/trac-plugins-GitPlugin/Makefile
+++ b/trac-plugins-GitPlugin/Makefile
@@ -2,6 +2,7 @@
 
 DISTNAME=	gitplugin_0.12-r${SVN_REV}
 PKGNAME=	trac-plugins-GitPlugin-0.1pre${SVN_REV}
+PKGREVISION=	1
 EGG_NAME=	TracGit-0.12.0.2dev
 CATEGORIES=	www
 MASTER_SITES=	-http://trac-hacks.org/changeset/${SVN_REV}/${SVN_MOD}?old_path=/&format=zip
