--- a/cityhash/Makefile
+++ b/cityhash/Makefile
@@ -6,7 +6,7 @@ CATEGORIES=	devel security textproc
 MASTER_SITES=	http://cityhash.googlecode.com/files/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://cityhash.googlecode.com/files/
+HOMEPAGE=	https://code.google.com/p/cityhash/
 COMMENT=	Provides hash functions for strings
 LICENSE=	mit
 
