--- a/grisbi/Makefile
+++ b/grisbi/Makefile
@@ -15,7 +15,7 @@ GNU_CONFIGURE=	yes
 USE_TOOLS+=	pkg-config intltool gmake
 
 
-INSTALLATION_DIRS=	${PKGMANDIR}/man1 ${PREFIX}/share/applications/
+INSTALLATION_DIRS=	${PREFIX}${PKGMANDIR}/man1 ${PREFIX}/share/applications/
 
 PKG_OPTIONS_VAR=                PKG_OPTIONS.gribsi
 PKG_SUPPORTED_OPTIONS=          libofx
