--- a/libssh/Makefile
+++ b/libssh/Makefile
@@ -5,7 +5,7 @@ DISTNAME=		libssh-0.5.4
 CATEGORIES=		security
 MASTER_SITES=		https://red.libssh.org/attachments/download/41/
 
-MAINTAINER=		pkgsrc-users@NetBSD.org
+MAINTAINER=		noud4@home.nl
 HOMEPAGE=		http://www.libssh.org/
 COMMENT=		SSHv2 and SSHv1 protocol
 LICENSE=		2-clause-bsd
