--- a/mini18n/Makefile
+++ b/mini18n/Makefile
@@ -1,16 +1,22 @@
 # $NetBSD$
 #
 
-DISTNAME=	mini18n-0.1
+DISTNAME=	mini18n-0.2.1
 CATEGORIES=	devel
-MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=yabause/}
+MASTER_SITES=	http://download.tuxfamily.org/yabause/releases/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://yabause.org/
 COMMENT=	Minimal translation library
 LICENSE=	gnu-gpl-v2
 
-GNU_CONFIGURE=	yes
-USE_LIBTOOL=	yes
+USE_LANGUAGES+=	c c++
+USE_CMAKE=	yes
+
+SUBST_CLASSES+=		mandir
+SUBST_FILES.mandir=	doc/CMakeLists.txt
+SUBST_MESSAGE.mandir=	Fixing PKGMANDIR.
+SUBST_SED.mandir=	-e "s|share/man|${PKGMANDIR}|g"
+SUBST_STAGE.mandir=	post-patch
 
 .include "../../mk/bsd.pkg.mk"
