--- a/qtnotifydaemon/Makefile
+++ b/qtnotifydaemon/Makefile
@@ -29,4 +29,5 @@ do-install:
 .include "../../x11/libX11/buildlink3.mk"
 .include "../../x11/qt4-qdbus/buildlink3.mk"
 .include "../../x11/qt4-tools/buildlink3.mk"
+.include "../../x11/qt4-libs/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
