--- a/mpb/Makefile
+++ b/mpb/Makefile
@@ -23,5 +23,5 @@ CFLAGS+=	-DH5_USE_16_API=1
 .include "../../devel/hdf5/buildlink3.mk"
 .include "../../math/fftw2/buildlink3.mk"
 .include "../../devel/readline/buildlink3.mk"
-.include "../../wip/libctl/buildlink3.mk"
+.include "../../devel/libctl/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
