--- a/hs-semigroups/Makefile
+++ b/hs-semigroups/Makefile
@@ -1,7 +1,7 @@
 # $NetBSD$
 #
 
-DISTNAME=	semigroups-0.8
+DISTNAME=	semigroups-0.9
 CATEGORIES=	math
 
 MAINTAINER=	pho@cielonegro.org
@@ -9,4 +9,5 @@ COMMENT=	Haskell 98 semigroups
 LICENSE=	modified-bsd
 
 .include "../../wip/mk/haskell.mk"
+.include "../../wip/hs-nats/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
