Change MAINTAINER to pkgsrc-users.

--- a/gcc48snapshot/Makefile
+++ b/gcc48snapshot/Makefile
@@ -15,7 +15,7 @@ MASTER_SITES=	${MASTER_SITE_GNU:=gcc/snapshots/${GCC_VERSION}/}
 #MASTER_SITES=	ftp://ftp.fu-berlin.de/unix/languages/gcc/snapshots/${GCC_VERSION}/
 EXTRACT_SUFX=	.tar.bz2
 
-MAINTAINER=	sbd@NetBSD.org
+MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://gcc.gnu.org/
 COMMENT=	The GNU Compiler Collection (GCC) - 4.8 Release Series
 LICENSE=	gnu-gpl-v2 AND gnu-gpl-v3 AND gnu-lgpl-v2 AND gnu-lgpl-v3
