--- a/SDL2/Makefile
+++ b/SDL2/Makefile
@@ -2,7 +2,7 @@
 #
 
 REVISION=	6940
-DISTNAME=	SDL-2.0.0-${REVISION}
+DISTNAME=	SDL-2.0.0.${REVISION}
 PKGNAME=	${DISTNAME:S/SDL/SDL2/1}
 CATEGORIES=	devel
 MASTER_SITES=	http://www.libsdl.org/tmp/
