--- a/py-mark/Makefile
+++ b/py-mark/Makefile
@@ -9,7 +9,7 @@ MASTER_SITES=	http://pypi.python.org/packages/source/m/mark/
 MAINTAINER=	jihbed.research@gmail.com
 HOMEPAGE=	http://packages.python.org/mark/
 COMMENT=RDF Bookmarking Utilities
-LICENSE=	gnu-agpl-v3
+LICENSE=	gnu-agpl-v3-license
 
 DEPENDS+=	${PYPKGPREFIX}-argparse>=1.1:../../devel/py-argparse
 DEPENDS+=	${PYPKGPREFIX}-rdflib>=2.4.2:../../wip/py-rdflib
