Revert previous, pkgsrc commit for license rename was reverted too.

--- a/ruby-diaspora/Makefile
+++ b/ruby-diaspora/Makefile
@@ -15,7 +15,7 @@ MAINTAINER=     gdt@NetBSD.org
 HOMEPAGE=       http://diasporaproject.org/
 #HOMEPAGE=	http://diaspora.github.com/diaspora/
 COMMENT=        Federated privacy-aware social network
-LICENSE=        gnu-agpl-v3-license
+LICENSE=        gnu-agpl-v3
 
 # Packaging decisions:
 #   This package will only (for now) support pgsql.
