--- a/fftw-openmpi/Makefile
+++ b/fftw-openmpi/Makefile
@@ -13,6 +13,9 @@ LICENSE=		gnu-gpl-v2
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
+INSTALLATION_PREFIX=	$(BUILDLINK_PREFIX.mpich:Q)
+#INSTALLATION_PREFIX=	$(BUILDLINK_PREFIX.openmpi:Q)
+
 USE_LANGUAGES=		c fortran77
 USE_LIBTOOL=		yes
 USE_TOOLS+=		gmake
@@ -25,7 +28,7 @@ TEST_TARGET=		check
 
 CONFIGURE_ARGS+=	--enable-shared \
 			--enable-mpi \
-			--prefix=${MPI_PREFIX:Q}
+			--prefix=$(INSTALLATION_PREFIX)
 
 .include "../../mk/bsd.prefs.mk"
 
@@ -33,5 +36,6 @@ CONFIGURE_ARGS+=	--enable-shared \
 USE_TOOLS+=		perl
 .endif
 
-.include "../../wip/openmpi-prefixed/buildlink3.mk"
+.include "../../wip/mpi-ch/buildlink3.mk"
+#.include "../../wip/openmpi/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
