--- a/p5-File-Inplace/Makefile
+++ b/p5-File-Inplace/Makefile
@@ -7,7 +7,7 @@ CATEGORIES=	sysutils
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=File/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://search.cpan.org/~chipt/File-Inplace-0.20/
+HOMEPAGE=	http://search.cpan.org/~chipt/File-Inplace/
 COMMENT=	Perl module for in-place editing of files
 LICENSE=	${PERL5_LICENSE}
 
