Update to 20130310 snapshot. Update patch-gcc_makefile.in from lang/gcc47.

--- a/gcc48snapshot/Makefile
+++ b/gcc48snapshot/Makefile
@@ -3,7 +3,7 @@
 GCC_PKGNAME=		gcc48snapshot
 #.include		"version.mk"
 
-GCC_VERSION=	4.8-20130303
+GCC_VERSION=	4.8-20130310
 DISTNAME=	gcc-${GCC_VERSION}
 PKGNAME=	${GCC_PKGNAME}-${GCC_VERSION}
 ## When bumping the PKGREVISION of this package the PKGREVISION of
@@ -75,7 +75,7 @@ CONFIGURE_ARGS+=	--disable-bootstrap
 .endif
 
 .if !empty(LOWER_ARCH:Mi386)
-CONFIGURE_ARGS+=	--with-arch=i486 --with-tune=nocona
+CONFIGURE_ARGS+=	--with-arch=i486 --with-tune=i486
 .endif
 
 .include "options.mk"
